# laneSegmention20210410

./: .README.md.swp  .gitpod.yml  README.en.md  README.md
week1/: 1_cv.ipynb  upsampling.ipynb  作业-week1.txt
week1/.ipynb_checkpoints/: upsampling-checkpoint.ipynb
week2/: .upsampling_homework.py.swp  FCN.ipynb  fcn.py  upsampling_homework.py  作业-week2.txt
week3/: .FCN_4s.py.swp  run.sh
week3/week2参考答案/: FCN_4s.py
week3/作业/: ResNet_UNetpp_homework.ipynb  resnet_unetpp_homework.py
week3/课上代码/: .ResNet.py.swp  ResNet.ipynb  ResNet.py  UNet.ipynb  UNet.py  run_python
week4/: aspp.py  deeplabv3plus.py  作业要求.txt
week4/week3参考答案/: resnet_unetpp_homework参考答案.py
week5/.ipynb_checkpoints/: LMDB-checkpoint.ipynb
week5/class_code/augmentation/: .pixel.py.swp  color.py  pixel.py  transform.py
week5/class_code/label/: 171206_054430023_Camera_5.json  poly2mask.py
week5/week4_homework_answer/: aspp.py  感受野大小计算.xlsx
week6/class_code_homework/lane_segmentation/: train.py
week6/week5_answer/: LMDB.ipynb
week6/week5_answer/data_list/: val.csv
week6/week5_answer_kkb/lane_segmentation/: Readme.md  make_list.py  make_lmdb.py  test_dataloader.py  train.py
week6/week5_answer_vip/data_list/: train.csv
week7/: 作业说明.txt
week7/MNN/MNN/: PortraitNet_tail.mnn
week7/MNN/MNN/test/: CMakeLists.txt  compile.bat  main.cpp  main_free_image.cpp
week7/lane_segmentation/: config.py  flask_demo.py  make_list.py  make_lmdb.py  predict.py  train.py
week7/week6_answer/: README.txt  log_base.txt  log_dice.txt  log_nadam.txt  log_sgd.txt
(+101 files in other folders)
